# a1i3nr3c0n

./: -  .alienrecon_session.json  .dockerignore  .env  BUSINESS_PLAN.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  DOCKER_USAGE.md  Dockerfile  EXPLOIT_USAGE_EDUCATION.md  MCP_ARCHITECTURE.md  MCP_MIGRATION_GUIDE.md  MCP_QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  RELEASE_COMMANDS.md  RELEASE_NOTES_v1.0.md  SECURITY.md  SETUP_GUIDE.md  SIMPLE_USAGE.md  TEST_COVERAGE_STATUS.md  a37-roadmap.md  alienrecon-docker.sh  docker-compose.dev.yml  docker-compose.mcp.yml  docker-compose.yml  pyproject.toml  run_mcp_test.sh  setup_user.sh  setup_user_simple.sh
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
archive/dev-notes/: commit_message.txt  refactor.md
archive/mcp-migration/: COMPLETE_MCP_FIX_SUMMARY.md  EVENT_LOOP_FIX_SUMMARY.md  MCP_FIX_SUMMARY.md  MCP_IMPLEMENTATION_STATUS.md  MCP_TEST_STATUS.md  OPENAI_REMOVAL_SUMMARY.md
docs/: MCP_INTEGRATION.md  PRODUCT_REVIEW_AND_ACTION_PLAN.md  TEST_STRATEGY.md  mcp-integration-design.md
docs/specs/: ALIENRECON-SPEC.md  ROOM-FORMAT.md
mcp_servers/alienrecon_unified/: Dockerfile  requirements.txt  server.py
src/alienrecon/: __main__.py  cli.py  config.py
src/alienrecon/agent/: assistant.py  brain.py  instructor.py
src/alienrecon/core/: agent.py  agent_factory.py  async_helper.py  cache.py  config.py  enhanced_interaction.py  exceptions.py  exploit_analyzer.py  flag_celebrator.py  input_validator.py  interaction_handler.py  mcp_agent.py  mcp_client.py  mcp_server_manager.py  mcp_session_adapter.py  mcp_sync_wrapper.py  plan_executor.py  prompt_loader.py  refactored_session_controller.py  report_generator.py  session_manager.py  tool_orchestrator.py  types.py
src/alienrecon/curriculum/: profile.py  rooms.py
src/alienrecon/data/prompts/: mcp_system_prompt.txt
src/alienrecon/data/rooms/: index.yaml  thm-activerecon.yaml  thm-authenticationbypass.yaml  thm-burpsuitebasics.yaml  thm-burpsuiteextensions.yaml  thm-burpsuiteintruder.yaml  thm-burpsuiteom.yaml  thm-burpsuiterepeater.yaml  thm-careersincyber.yaml  thm-contentdiscovery.yaml  thm-defensivesecurityintro.yaml  thm-exploitingavulnerabilityv2.yaml  thm-fileinc.yaml  thm-idor.yaml  thm-introtoshells.yaml  thm-lazyadmin.yaml  thm-linprivesc.yaml  thm-metasploitexploitation.yaml  thm-metasploitintro.yaml  thm-meterpreter.yaml  thm-netsecchallenge.yaml  thm-nmap01.yaml  thm-nmap02.yaml  thm-nmap03.yaml  thm-nmap04.yaml  thm-offensivesecurityintro.yaml  thm-oscommandinjection.yaml  thm-passiverecon.yaml  thm-pentestingfundamentals.yaml  thm-principlesofsecurity.yaml  thm-protocolsandservers.yaml  thm-protocolsandservers2.yaml  thm-raceconditionsattacks.yaml  thm-sqlinjectionlm.yaml  thm-ssrfqi.yaml  thm-subdomainenumeration.yaml  thm-vulnerabilities101.yaml  thm-vulnerabilitycapstone.yaml  thm-walkinganapplication.yaml  thm-windowsprivesc20.yaml  (+1 more)
src/alienrecon/display/: ui.py
src/alienrecon/prompts/: system_prompt.txt  terminal_simulation_prompt.txt  welcome_message.txt  welcome_message_with_target.txt
src/alienrecon/tools/: base.py  checker.py  ffuf.py  http_ssl_probe.py  hydra.py  nikto.py  nmap.py  searchsploit.py  smb.py  ssl_inspector.py  vpn.py
tests/: test_utils.py
tests/e2e/: test_complete_workflow.py
tests/experimental/: run_tests.py  test_cli_functionality.py  test_comprehensive_final.py  test_consolidated_tools.py  test_enhanced_confirmation.py  test_error_scenario.py  test_mcp_complete.py  test_mcp_e2e.py  test_mcp_final.py  test_mcp_integration.py  test_mcp_server.py  test_orphan_fix_integration.py  test_real_flow.py  test_session_integration.py  test_validate_history.py
tests/fixtures/: curl_connection_refused.txt  curl_ssl_hostname_mismatch.txt  curl_ssl_success.txt  searchsploit_empty_results.json  searchsploit_json_results.json
tests/integration/: __init__.py  test_mcp_integration.py  test_mcp_workflow.py  test_security_validation.py  test_tool_orchestrator.py
tests/tools/: test_ffuf_comprehensive.py  test_http_ssl_probe.py  test_nmap_comprehensive.py  test_searchsploit.py  test_ssl_inspector.py
tests/unit/: test_agent_factory.py  test_exploit_analyzer.py  test_main.py  test_mcp_client.py  test_mcp_server_manager.py  test_mcp_session_adapter.py  test_mcp_tool_execution.py  test_refactored_session_controller.py  test_report_generator.py
