[project]
name = "alienrecon"
version = "1.0.0"
description = "Alien Recon: An AI-guided CTF/Red-Team Assistant"
authors = [{name = "a1i3n37x", email = "your-gh-username@users.noreply.github.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["ctf", "hacking", "security", "ai", "reconnaissance", "pentesting", "cybersecurity"]
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai~=1.78.1",
    "rich~=13.7.0",
    "python-dotenv~=1.0.0",
    "typer[all]~=0.16.0",
    "httpx~=0.27.0",
    "click~=8.1.7",
    "requests~=2.32.4",
    "python-nmap~=0.7.1",
    "impacket~=0.12.0",
    "pyyaml~=6.0.1",
    "fastapi~=0.104.1",
    "uvicorn[standard]~=0.24.0",
    "pydantic~=2.10.3",
    "urllib3>=2.5.0",
]

[project.urls]
"Homepage" = "https://github.com/a1i3n37x/a37"
"Repository" = "https://github.com/a1i3n37x/a37"
"Bug Tracker" = "https://github.com/a1i3n37x/a37/issues"

[project.scripts]
alienrecon = "alienrecon.cli:app"

[tool.poetry]
# Keep tool.poetry section for Poetry-specific configuration

[tool.poetry.group.dev.dependencies]
# Your existing dev dependencies + pytest-cov
ruff = "^0.11.9"    # From your file (ensure this is the latest or your preferred version)
mypy = "^1.15.0"    # From your file (ensure this is the latest or your preferred version)
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
black = "^24.4.2"
isort = "^5.13.2"
coverage = "^7.0.0"  # For coverage reporting
pip-audit = "^2.6.0" # For security scanning

# This section is crucial for Poetry to know how to build your project
pre-commit = "^4.2.0"
types-requests = "^2.32.4.20250611"
types-pyyaml = "^6.0.12.20250516"
pytest-trio = "^0.8.0"
[build-system]
requires = ["poetry-core>=1.0.0"] # poetry-core is the build backend for poetry itself
build-backend = "poetry.core.masonry.api"

# --- Tool Configurations ---
# Your existing Ruff and Mypy configurations are good and remain unchanged below.

[tool.ruff]
# Set the maximum line length
line-length = 88
# Assume Python 3.11+ features (matches your python dependency)
target-version = "py311"

[tool.ruff.lint]
# Select rule codes to enable.
# E/W: pycodestyle errors/warnings
# F: Pyflakes
# I: isort (import sorting)
# UP: pyupgrade (upgrade syntax)
# Add more as needed: https://docs.astral.sh/ruff/rules/
select = ["E", "F", "W", "I", "UP"]

# You might ignore specific rules if needed, e.g. E501 (line too long)
# if you rely solely on the formatter for line length.
# ignore = ["E501"]
# Ignore specific rules
ignore = [
    "E501",  # If you want to manually handle all line lengths (but we fixed them)
             # For now, let's ONLY add UP007
    "UP007", # Do not upgrade Optional[X] to X | None
]

[tool.ruff.format]
# Optional: Configuration for the formatter, if needed beyond line-length.
# Defaults are usually good.

[tool.mypy]
# Specify the Python version you're targeting
python_version = "3.11" # Make sure this matches your project

# --- Start with reasonably strict settings ---
check_untyped_defs = true      # Checks functions without type hints
disallow_incomplete_defs = true # Checks partially annotated functions
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true         # Warns if a function returns 'Any' implicitly

# --- For dealing with libraries ---
# Set this to true if you use libraries without type stubs
# and don't want errors for them. Can be refined later.
ignore_missing_imports = true

# --- Show error codes for easier ignoring if needed ---
show_error_codes = true

# Scripts are now defined in [project.scripts] above

[tool.pytest.ini_options]
# Configure pytest
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Generate XML coverage report for CI
addopts = "--cov-report=xml --cov-report=term"

[tool.coverage.run]
# Configure coverage
source = ["src/alienrecon"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/tui/*",  # TUI is hard to test in CI
]

[tool.coverage.report]
# Coverage report settings
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
