[project]
name = "alienrecon"
version = "2.0.0"
description = "AI-powered cybersecurity instructor. From zero to first blood."
authors = [{name = "a1i3n37x"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["ctf", "hacking", "security", "ai", "instructor", "pentesting", "cybersecurity"]
requires-python = ">=3.11,<4.0"
dependencies = [
    "rich~=13.7.0",
    "typer[all]~=0.16.0",
    "pyyaml~=6.0.1",
    "python-dotenv~=1.0.0",
    "anthropic>=0.40.0",
]

[project.urls]
"Homepage" = "https://alien37.com"
"Repository" = "https://github.com/a1i3n37x/a1i3nr3c0n"

[project.scripts]
alienrecon = "alienrecon.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
mypy = "^1.15.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "UP007"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
